--- a/website/style.css
+++ b/website/style.css
@@ -65,7 +65,7 @@ nav ul li {
 
 nav ul li a {
   padding: 25px;
-  font-family: "Open Sans";
+  /*font-family: "Open Sans";*/
   text-transform:uppercase;
   color: white;
   font-size: 18px;
@@ -81,49 +81,6 @@ nav ul li a:hover {
   text-shadow: 1px 1px;
 }
 
-/*.nav {
-  z-index: 9999; 
-  background: #272326; 
-  
-
-  margin-top:0px;
-  top: 0px;
-  
-  list-style: none;
-  text-align: right;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  font-size: 20px;
-  font-weight: bolder;
-  position: -webkit-sticky;
-  position: sticky; 
-  position: sticky;
-  border: 1px solid black;
-
-    overflow: hidden;
-    position: fixed;
-    bottom: 20;
-    width: 95%;
-}
-*/
-
-/*.nav > li { 
-   display: inline-block; 
-   padding-right: 50px; 
-  
-} */
-
-/*.nav > li > a{
-  text-decoration: none;
-  color: white;
-  
-}
-
-.nav > li > a:hover {
-  color: c1c1c1;
-  
-}
-*/
 a { 
   text-decoration:none;
 }
@@ -198,7 +155,8 @@ a {
   }
 
 .proSect2{
-  background-image: url("img/city.jpg");
+  /*background-image: url("img/city.jpg");*/
+  background-image: url("pic2.jpg");
   /*height:550px;*/
   min-height: 100%;
   border: 0.1px solid black;
@@ -978,7 +936,6 @@ section:nth-child(6) ul li:nth-child(8){ background:#31333F;}
 section:nth-child(6) ul li:nth-child(7){ background:#31333F;}
 section:nth-child(6) ul li:nth-child(6){ background:#31333F;}
 section:nth-child(6) ul li:nth-child(5){ background:#31333F;}
-section:nth-child(6) ul li:nth-child(4){ background:#31333F;}
 
 section:nth-child(7) ul li:nth-child(11){ background:#31333F;}
 section:nth-child(7) ul li:nth-child(10){ background:#31333F;}
@@ -1039,15 +996,29 @@ section .bar:last-child:after
 /*text on hover*/
 
 /*section:nth-child(1) li:nth-child(11):after{content:"HTML5";}*/
+/*CSS*/
 section:nth-child(2) li:nth-child(11):after{color:white;content:"pretty decent at it";left:27px;}
-section:nth-child(3) li:nth-child(11):after{color:white;content:"I am very confortable";}
-section:nth-child(4) li:nth-child(11):after{color:white;content:"I am okay at it";left:27px;}
-section:nth-child(5) li:nth-child(11):after{color:white;content:"I can do it at the back of my head";}
 
-section:nth-child(6) li:nth-child(11):after{color:white;content:"C++";}
-section:nth-child(7) li:nth-child(11):after{color:white;content:"Android";}
-section:nth-child(8) li:nth-child(11):after{color:white;content:"MySql";}
-section:nth-child(9) li:nth-child(11):after{color:white;content:"ReactJs";}
+/*HTML*/
+section:nth-child(3) li:nth-child(11):after{color:white;content:"I am very confortable";}
+
+/*JS*/
+section:nth-child(4) li:nth-child(11):after{color:white;content:"I am okay at it";left:27px;}
+
+/*Java*/
+section:nth-child(5) li:nth-child(11):after{color:white;content:"I can do it at the back of my hand";}
+
+/*C++*/
+section:nth-child(6) li:nth-child(11):after{color:white;content:"I struggle a bit";}
+
+/*Android*/
+section:nth-child(7) li:nth-child(11):after{color:white;content:"One of my expertise!";}
+
+/*MySQL*/
+section:nth-child(8) li:nth-child(11):after{color:white;content:"Please don't even ask";}
+
+/*ReactJs*/
+section:nth-child(9) li:nth-child(11):after{color:white;content:"I am decent but I have a long way to go";}
 
 section:hover li:last-child:after
 {
@@ -1239,7 +1210,7 @@ section:nth-child(6):hover li:nth-child(8) {background:#FFE161;-webkit-transitio
 section:nth-child(6):hover li:nth-child(7) {background:#FFE161;-webkit-transition:all 2s ease;-moz-transition:all 2s ease;transition:all 2s ease;}
 section:nth-child(6):hover li:nth-child(6) {background:#FFE161;-webkit-transition:all 2.5s ease;-moz-transition:all 2.5s ease;transition:all 2.5s ease;}
 section:nth-child(6):hover li:nth-child(5) {background:#FFE161;-webkit-transition:all 2.5s ease;-moz-transition:all 2.5s ease;transition:all 2.5s ease;}
-section:nth-child(6):hover li:nth-child(4) {background:#FFE161;-webkit-transition:all 2.5s ease;-moz-transition:all 2.5s ease;transition:all 2.5s ease;}
+/*section:nth-child(6):hover li:nth-child(4) {background:#FFE161;-webkit-transition:all 2.5s ease;-moz-transition:all 2.5s ease;transition:all 2.5s ease;}*/
 
 section:nth-child(7):hover li:nth-child(11) {
   background:#89CC0A;
